cwidget (0.5.17-3) UNRELEASED; urgency=medium

  * Quell lintian warning xs-testsuite-header-in-debian-control by
    removing XS- prefix in debian/control

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Fri, 17 Jul 2015 16:00:28 +0100

cwidget (0.5.17-2) unstable; urgency=medium

  [ Jérémy Bobbio ]
  * Add a patch to have Doxygen not write timestamps in the generated
    documentation to allow package builds to be reproducible.  (Closes:
    #762666)

  [ Manuel A. Fernandez Montecelo ]
  * Bump Standards-Version to 3.9.6 (no changes needed)
  * Change priority of source package to 'optional' (from 'extra'), and
    remove the override of priority 'important' for the binary package
    libcwidget3

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sun, 28 Sep 2014 16:03:09 +0100

cwidget (0.5.17-1) unstable; urgency=medium

  * New upstream release
    - Incorporated changes of last NMUs
    - Remove -1.9 from some of the autotools commands, run instead the
      latest/default versions of the system (1.9 is quite old by now)
  * debian/source/format: move from "1.0" to "3.0 (quilt)"
  * debian/compat: level 9
    - Multi-Arch enabled now
  * Add tests for autopkgtest

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sat, 22 Feb 2014 00:21:23 +0000

cwidget (0.5.16-5) unstable; urgency=medium

  * Bump Standards-Version to 3.9.5 (no changes needed)
  * Use dh-autoreconf instead of autotools-dev for better new-port
    coverage.  Thanks Colin Watson for the report and the patch (I applied
    it by hand and slightly modified since it didn't apply cleanly).
    (Closes: #732539)
  * Quell lintian warnings:
    - embedded-javascript-library: add Depends on libjs-jquery in the -doc
      package, and create a symbolic link instead of install the local copy
      of the file "jquery.min.js"
    - "binary-control-field-duplicates-source": remove duplicate Priority
      field from most of the binary packages